--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,15 +43,17 @@
   },
   "description": "The online sneaker store was made to study and consolidate the skills of working with React. As well as the practice of using SCSS to reduce code and avoid multiple assignment of a class to each element.",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NadezdaPL/React-sneakers.git"
+    "url": "git+https://github.com/React-sneakers.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NadezdaPL/React-sneakers/issues"
+    "url": "https://github.com/React-sneakers/issues"
   },
-  "homepage": "https://github.com/NadezdaPL/React-sneakers#readme"
+  "homepage": "https://github.com/React-sneakers",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
