--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-sneakers",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://6408dcbf2f01352a8a9f916e.mockapi.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -56,7 +57,7 @@
   "bugs": {
     "url": "https://github.com/React-sneakers/issues"
   },
-  "homepage": "https://github.com/React-sneakers",
+  "homepage": "https://nadezdapl.github.io/React-sneakers/",
   "devDependencies": {
     "gh-pages": "^5.0.0"
   }
